--- a/index.html
+++ b/index.html
@@ -8,37 +8,41 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+<div class="text">
 <h1> Currency Converter </h1>
+<p class="text-p">Select the currencies, enter an amount, and get the result in seconds.<br />
+    Powered by free exchange rate API.</p>
+</div>
 <div class="main-container">
 <div class="main-selections">
     <div class="amount-div">
-    <label for="amount">Amount</label>
+    <label for="amount" class="amount-label">Amount</label>
     <input type="number" id="amount" name="amount" value="amount" checked>
     </div>
     <div class="from-div">
-        <label for="from">From</label>
+        <label class="from-label" for="from">From</label>
         <select id="from" name="from">
             <option selected>Select</option>
             <option value="USD">USD</option>
             <option value="EUR">EUR</option>
             <option value="GBP">GBP</option>
-            <option value="CAD">CAD</option>
+            <option value="UAH">UAH</option>
         </select>
     </div>
     <div class="to-div">
-        <label for="to">To</label>
+        <label class="to-label" for="to">To</label>
         <select id="to" name="to">
             <option selected>Select</option>
             <option value="USD">USD</option>
             <option value="EUR">EUR</option>
             <option value="GBP">GBP</option>
-            <option value="CAD">CAD</option>
+            <option value="UAH">UAH</option>
         </select>
     </div>
 </div>
     <button class="btn">Exchange</button>
     <div class="result">
-        <p id="result"></p>
+        <p id="result">546</p>
     </div>
 </div>
 <script src="script.js"></script>
