--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         </select>
     </div>
 </div>
-    <button class="btn">Exchange</button>
+    <button class="btn" id="btn">Exchange</button>
     <div class="result">
-        <p id="result">546</p>
+        <p id="result"></p>
     </div>
 </div>
 <script src="script.js"></script>
